# devops-demo24

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: master.yml
devops_demo/: manage.py
devops_demo/devops_demo/: asgi.py  serializers.py  settings.py  tests.py  urls.py  views.py  wsgi.py
tasks/: __init__.py  config.py  docker.py
